prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/sema_errors/initialization_required.nut
// EXPECT_ERROR: "Initialization required"
if (local x; x < 10; x++) {}
